cmake_minimum_required(VERSION 3.19)
project(LeetCode)

set(CMAKE_CXX_STANDARD 20)

add_executable(LeetCode main.cpp march_challenge/binary_codes_of_2.cpp march_challenge/binary_codes_of_2.h march_challenge/bi_trees_with_factors.cpp march_challenge/bi_trees_with_factors.h march_challenge/swaping_nodes_ll.cpp march_challenge/swaping_nodes_ll.h)